disabled/k8s.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-deployment
  template:
    metadata:
      labels:
        app: my-deployment
    spec:
      containers:
        - name: my-app-container
          image: docker.io/blakefernandes/argocd-app-test:1.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
