disabled/networking.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: guestbook
spec:
  rules:
  # host rule to only reach the desired pods (aka canary/preview)
  - host: guestbook-desired.argoproj.io
    http:
      paths:
      - backend:
          serviceName: guestbook-desired
          servicePort: 443
        path: /*
  # host rule to only reach the stable pods
  - host: guestbook-stable.argoproj.io
    http:
      paths:
      - backend:
          serviceName: guestbook-stable
          servicePort: 443
        path: /*
  # default rule which omits host, and will split traffic between desired vs. stable
  - http:
      paths:
      - backend:
          serviceName: guestbook-root
          servicePort: 443
        path: /*
